# localbook

./: .gitignore  .pdfjs-version  LICENSE  README.md  config.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
localbook/: __init__.py  config.py  dependencies.py  localbook.py  router.py  service.py
localbook/controller/: library.py
localbook/core/: __init__.py
localbook/core/decorators/: __init__.py
localbook/core/filesystem/: __init__.py  nodes.py
localbook/exceptions/: __init__.py  exceptions.py  handlers.py
localbook/lib/: __init__.py
localbook/lib/decorators/: __init__.py  singleton.py
localbook/lib/filesystem/: __init__.py  dir.py  file.py  node.py  pdf.py  tree.py  utils.py
localbook/lib/static/: __init__.py
localbook/service/: __init__.py
localbook/service/book/: __init__.py  book.py  cover.py
localbook/service/pdf/: __init__.py  pdf.py
localbook/templates/: __init__.py
scripts/: _config.py  dev  header.py  pdf_to_image.py  pdfjs.py  test_output.py  toml_to_env.py  update_user_data.py
static/: manifest.json
static/css/: base.css  framework.css  main.css  style.css
static/css/colors/: base.css  dark.css  light.css
static/css/components/entries/: card.css  row.css
static/css/pages/: error.css  list-view.css  tree-view.css
static/js/: change-theme.js  pdfjs-override-run.js
static/modules/pdfviewer/: viewer.html  viewer.mjs
templates/: base.html.jinja  base.jinja
templates/components/: header.jinja
templates/components/entries/: dir_entry.jinja  file_entry.jinja  pdf_entry.jinja
templates/pages/: 404.html.jinja  415.html.jinja  base_error.jinja  book_viewer_mozilla.jinja  list_view.html.jinja  list_view.jinja  pdfviewer.html.jinja  pdfviewer_native.html.jinja  pdfviewer_native.jinja  tree_view.html.jinja  tree_view.jinja
tests/: conftest.py  test_fs.py
tests/function/service/: __init__.py  test_cover.py
tests/intergration/lib/: __init__.py  test_fstree.py  test_tree.py
tests/intergration/service/: __init__.py  test_cover.py
tests/stub/: tree.py
tests/unit/lib/: test_fs.py
tests/unit/service/pdf/: test_cover.py
tests/utils/: __init__.py  fs.py  stub_tree.py
