[project]
name = "localbook"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0 ; python_full_version >= '3.9'",
    "click==8.1.8 ; python_full_version >= '3.7'",
    "fastapi>=0.115.11",
    "fastapi-cli>=0.0.7",
    "itsdangerous==2.2.0 ; python_full_version >= '3.8'",
    "jinja2==3.1.5 ; python_full_version >= '3.7'",
    "markupsafe==3.0.2 ; python_full_version >= '3.9'",
    "pdf2image==1.17.0",
    "pillow==11.1.0 ; python_full_version >= '3.9'",
    "pydantic-settings>=2.8.1",
    "python-dotenv==1.0.1 ; python_full_version >= '3.8'",
    "python-magic>=0.4.27",
    "requests>=2.32.3",
    "watchfiles>=1.0.4",
    "werkzeug==3.1.3 ; python_full_version >= '3.9'",
]
[jinja-lsp]
templates = "./templates"
backend = ["./localbook"]
lang = "python"
