[project]
name = "localbook"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0 ; python_full_version >= '3.9'",
    "click==8.1.8 ; python_full_version >= '3.7'",
    "fastapi>=0.115.11",
    "fastapi-cli>=0.0.7",
    "itsdangerous==2.2.0 ; python_full_version >= '3.8'",
    "jinja2==3.1.5 ; python_full_version >= '3.7'",
    "markupsafe==3.0.2 ; python_full_version >= '3.9'",
    "pdf2image==1.17.0",
    "pillow==11.1.0 ; python_full_version >= '3.9'",
    "pydantic-settings>=2.8.1",
    "python-dotenv==1.0.1 ; python_full_version >= '3.8'",
    "python-magic>=0.4.27",
    "requests>=2.32.3",
    "watchfiles>=1.0.4",
    "werkzeug==3.1.3 ; python_full_version >= '3.9'",
]
[jinja-lsp]
templates = "./templates"
backend = ["./localbook"]
lang = "python"
[tool.pyright]
include = ["./localbook"]
exclude = [ "**/__pycache__", ".venv" ]
defineConstant = { DEBUG = true }
reportMissingImports = "error"
reportMissingTypeStubs = false
pythonPlatform = "Linux"
venvPath = "."
venv =".venv"
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
